<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/sw_ai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_ai_suggestions" />

        <Switch
            android:id="@+id/sw_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_bluetooth" />

        <Switch
            android:id="@+id/sw_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle_wifi" />

        <Button
            android:id="@+id/btn_permissions"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/request_permissions"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white" />
    </LinearLayout>
</ScrollView>
